corrected bugs
git-svn-id: svn+ssh://scm.gforge.inria.fr/svn/proactive/branches/SHORT_Message_Routing@11192 28e8926c-6b08-0410-baaa-805c5e19b8d6